--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Data Platform</title>
+    <script src="https://webapi.amap.com/maps?v=1.4.15&key=14e2e0993db30a21d6b9cd2b79a068a4"></script>
   </head>
   <body>
     <div id="root"></div>
